exports[`test the Large Secondary Button matches the snapshot 1`] = `
<button
  className="gVNhZM"
  type="button">
  ButtonValue
</button>
`;

exports[`test the beacon button matches the snapshot 1`] = `
<button
  aria-label=""
  className="isMiBq"
  type="button">
  ButtonValue
</button>
`;

exports[`test the button handling an onclick event 1`] = `
<button
  className="fzepBD"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button handling an onclick event 2`] = `
<button
  className="fzepBD"
  onClick={[Function]}
  type="button">
  ButtonValue
</button>
`;

exports[`test the button matches the snapshot 1`] = `
<button
  className="fzepBD"
  type="button">
  ButtonValue
</button>
`;

exports[`test the button with button type given matches the snapshot 1`] = `
<button
  className="fzepBD"
  type="button">
  ButtonValue
</button>
`;
